src/app/auth/register/register-page.component.scss
:host {
  background-color: var(--md-sys-color-surface);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: var(--padding-card);
}

.register {
  &__stepper {
    width: 100%;
  }

  &__step {
    display: flex;
    flex-direction: column;
    gap: var(--padding-card);
    max-width: 22rem;
  }

  &__error {
    margin: 0;
    color: var(--danger);
  }

  &__login-link {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: var(--padding-Child-item);
    margin-top: var(--padding-card);
  }
}

